Fix capitalization in publication titles and update conference name for clarity

--- a/_cv_data/0_publications.bib
+++ b/_cv_data/0_publications.bib
@@ -155,14 +155,15 @@ url = {https://diglib.eg.org/items/7ecae1fa-47ae-4f80-a684-a2e8a9ba1086}
 
 
 @inproceedings{demaria2023mining,
-  title={Mining Argument Components in Essays at Different Levels},
+  title={Mining argument components in essays at different levels},
   author={Demaria, Roberto and Colla, Davide and Delsanto, Matteo and Mensa, Enrico and Pasini, Enrico and Radicioni, Daniele P},
-  booktitle={International Conference of the Italian Association for Artificial Intelligence},
+  booktitle= {AIxIA 2023 -- Advances in Artificial Intelligence},
   pages={137--150},
   year={2023},
   organization={Springer},
   url ={https://link.springer.com/chapter/10.1007/978-3-031-47546-7_10}
 }
+
 
 @inproceedings{stranisci2023wikibio,
     title = "{W}iki{B}io: a Semantic Resource for the Intersectional Analysis of Biographical Events",
