--- a/_cv_data/0_publications.bib
+++ b/_cv_data/0_publications.bib
@@ -56,7 +56,8 @@ abstract = { A letter about “The Utility of Generative AI in Advancing Global 
 }
 
 @inproceedings{mensa2025therewas,
-booktitle = {Digital Heritage},
+booktitle = {DH2025 - Digital Heritage International Congress 2025},
+address = {Siena, Italy},
 editor = {Campana, Stefano and Ferdani, Daniele and Graf, Holger and Guidi, Gabriele and Hegarty, Zackary and Pescarin, Sofia and Remondino, Fabio},
 title = {{'There was a scribe, a priest and a thief'. Testing the potential of language models for the creation of curatorial narratives in an archaeological museum}},
 author = {Mensa, Enrico and Fulfaro, Chiara and Fubini, Flavia and Bottino, Andrea and Antonino, Riccardo and Ferraris, Enrico and Damiano, Rossana},
@@ -70,7 +71,8 @@ url = {https://diglib.eg.org/items/d7163d8d-1934-4d99-aea9-96b45f774cff}
 
 
 @inproceedings{macaluso2025label,
-booktitle = {Digital Heritage},
+booktitle = {DH2025 - Digital Heritage International Congress 2025},
+address = {Siena, Italy},
 editor = {Campana, Stefano and Ferdani, Daniele and Graf, Holger and Guidi, Gabriele and Hegarty, Zackary and Pescarin, Sofia and Remondino, Fabio},
 title = {{Large Language Models for Museum Label Optimization: A Case Study on Ministerial Compliance and Cultural Accessibility in Galleria Sabauda's Flemish Collection}},
 author = {Macaluso, Melissa and Mensa, Enrico and Marras, Anna Maria and Pisano, Paola},
@@ -113,7 +115,7 @@ url = {https://diglib.eg.org/items/7ecae1fa-47ae-4f80-a684-a2e8a9ba1086}
 @inproceedings{scozzaro2024reform,
   title={On the reform of the italian constitution: an interdisciplinary text readability analysis},
   author={Scozzaro, Calogero Jerik and Delsanto, Matteo and Mastropaolo, Antonio and Mensa, Enrico and Revelli, Luisa and Radicioni, Daniele Paolo and others},
-  booktitle={NL4AI 2024: Eighth Workshop on Natural Language for Artificial Intelligence, November 26-27th, 2024, Bolzano, Italy},
+  booktitle={NL4AI 2024: Eighth Workshop on Natural Language for Artificial Intelligence @ AIxIA 2024, November 26-27th, 2024, Bolzano, Italy},
   volume={3877},
   pages={1--13},
   year={2024},
