Add new conference paper on violence detection from emergency room reports

--- a/_cv_data/0_publications.bib
+++ b/_cv_data/0_publications.bib
@@ -1,3 +1,15 @@
+@INPROCEEDINGS{caresio25violence,
+  author={Caresio, Lorenzo and Delsanto, Matteo and Scozzaro, Calogero Jerik and Mensa, Enrico and Colla, Davide and Mamo, Carlo and Pitidis, Alessio and Vitale, Arianna and Radicioni, Daniele P.},
+  booktitle={2025 IEEE International Conference on Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering (MetroXRAINE)}, 
+  title={Violence Detection from Emergency Room Reports}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={305-310},
+  keywords={Data privacy;Silver;Accuracy;Hospitals;Terminology;Computer architecture;Transformers;Time factors;Sustainable development;Injuries;Violence detection;emergency room data;clinical narratives;privacy in medical data;transformer architecture},
+  doi={10.1109/MetroXRAINE66377.2025.11340242}}
+
+
 @article{natale2025chatgpt,
 author = {Simone Natale and Bruno Surace and Enrico Mensa and Luca Befera},
 title ={ChatGPT for cultural heritage and the customization of generative AI: A talkthrough analysis of the Luigi Einaudi chatbot},
