--- a/_cv_data/0_publications.bib
+++ b/_cv_data/0_publications.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{caresio25violence,
+@inproceedings{caresio25violence,
   author={Caresio, Lorenzo and Delsanto, Matteo and Scozzaro, Calogero Jerik and Mensa, Enrico and Colla, Davide and Mamo, Carlo and Pitidis, Alessio and Vitale, Arianna and Radicioni, Daniele P.},
   booktitle={2025 IEEE International Conference on Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering (MetroXRAINE)}, 
   title={Violence Detection from Emergency Room Reports}, 
@@ -6,6 +6,7 @@
   volume={},
   number={},
   pages={305-310},
+  url = {https://ieeexplore.ieee.org/document/11340242},
   keywords={Data privacy;Silver;Accuracy;Hospitals;Terminology;Computer architecture;Transformers;Time factors;Sustainable development;Injuries;Violence detection;emergency room data;clinical narratives;privacy in medical data;transformer architecture},
   doi={10.1109/MetroXRAINE66377.2025.11340242}}
 
